# ChangeLog for app-admin/gnome-system-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.72 2006/10/19 15:06:40 kloeri Exp $

  19 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on Alpha.

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Mark 2.14.0 stable on ia64. #139612

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org>
  gnome-system-tools-1.0.2-r1.ebuild, gnome-system-tools-1.2.0-r1.ebuild,
  gnome-system-tools-1.4.1.ebuild, gnome-system-tools-2.14.0.ebuild:
  Removing mips keywords as gnome isn't supported for us anymore.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on ppc64

  23 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  -gnome-system-tools-1.4.0.ebuild:
  Clean up unnecessary versions

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Marked stable on amd64 for bug #139612

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  hppa stable, bug #139612

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  ppc stable, bug #139612

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on x86 wrt bug #139612.

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on sparc wrt #139612

  20 May 2006; Marinus Schraal <foser@gentoo.org>
  files/gnome-system-tools-2.14.0-ALL_LINGUAS.patch:
  Fix the patch (#133711)

  18 May 2006; Patrick McLean <chutzpah@gentoo.org>
  Somehow a space got dropped from the patch, added back (bug #133711)

  18 May 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/gnome-system-tools-2.14.0-ALL_LINGUAS.patch,
  gnome-system-tools-2.14.0.ebuild:
  Added patch to fix bug #133616
